Bug 1262390 - In some cases, we fail with the small allocation because of the device reset situation. r=bas, a=gchang

MozReview-Commit-ID: BKMOZbgJ7px